--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+2024-10-15 - version 3.0.0
+Feature: Compatible Culqi API V4
+Feature: Compatible WC HPOS
+
 2021-06-07 - version 2.0.5
 Fix: validate if method exists
 
