--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2024-11-12 - version 3.0.1
+Fix: charge more information
+Fix: getCurrentItemID() return to string
+
+
 2024-10-15 - version 3.0.0
 Feature: Compatible Culqi API V4
 Feature: Compatible WC HPOS
